[project]
name = "trident"
version = "0.2.3"
description = "A package for preprocessing whole-slide images."
authors = [
    { name = "Guillaume Jaume", email = "gjaume@bwh.harvard.edu" },
    { name = "Andrew Zhang", email = "andrewzh@mit.edu" },
    { name = "Paul Doucet", email = "homedoucetpaul@gmail.com" },
]
license = "CC-BY-NC-ND-4.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipywidgets",
    "torch",
    "tqdm",
    "h5py",
    "matplotlib",
    "opencv-python",
    "openslide-python",
    "Pillow",
    "geopandas",
    "huggingface_hub",
    "openslide-bin",
    "transformers",
    "timm==0.9.16",
    "einops_exts",
    "scipy",
    "segmentation-models-pytorch",
    "safetensors",
]

[project.urls]
Repository = "https://github.com/mahmoodlab/TRIDENT"

[project.scripts]
run_batch_of_slides = "run_batch_of_slides"
run_single_slide = "run_single_slide"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trident"]

[tool.hatch.build.targets.sdist]
include = [
    "trident/**",
]

[tool.hatch.build.targets.wheel.force-include]
"trident/slide_encoder_models/local_ckpts.json" = "trident/slide_encoder_models/local_ckpts.json"
"trident/patch_encoder_models/local_ckpts.json" = "trident/patch_encoder_models/local_ckpts.json"
"trident/segmentation_models/local_ckpts.json" = "trident/segmentation_models/local_ckpts.json"
